--- a/projects.html
+++ b/projects.html
@@ -166,7 +166,7 @@
                   help.innerHTML += `<span class="terminal-text-highlighted">contact</span> - shows my contact informations<br />`;
                   help.innerHTML += `<span class="terminal-text-highlighted">clear</span> - clears the terminal (soon)<br />`;
                   help.innerHTML += `<span class="terminal-text-highlighted">exit</span> - exits the terminal (soon)<br /><br />`;
-                  help.innerHTML += `<span class="terminal-text-highlighted">ls </span> - lists files and folder in current directory<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">ls </span> - list files and folder in current directory<br />`;
                   help.innerHTML += `<span class="terminal-text-highlighted">github <project></span> - opens github repository`;
                   help.className = "terminal-text";
                   document.getElementById("line-2").appendChild(help);
