--- a/about.html
+++ b/about.html
@@ -1,80 +1,91 @@
 <!DOCTYPE html>
 <html lang="en-us">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+    <script type="text/javascript">
+      sessionStorage.setItem("counter", 0);
+    </script>
+    <title>Florian Schmitz</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
-  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-  <title>Florian Schmitz</title>
-</head>
+  <body>
+    <!-- Navbar -->
+    <div class="terminal-window">
+      <div
+        class="terminal-window-button"
+        style="background-color: #ff5f57"
+      ></div>
+      <div
+        class="terminal-window-button"
+        style="background-color: #febc30"
+      ></div>
+      <div
+        class="terminal-window-button"
+        style="background-color: #2bc840"
+      ></div>
+      <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
+    </div>
+    <nav>
+      <a class="nav-button" data-hotkey="Meta+1" href="index.html">
+        <ul>
+          <li class="nav-button-text">~</li>
+          <li>⌘1</li>
+        </ul>
+      </a>
+      <a class="nav-button-active" data-hotkey="Meta+2" href="about.html">
+        <ul>
+          <li class="nav-button-text">About</li>
+          <li>⌘2</li>
+        </ul>
+      </a>
+      <a class="nav-button" data-hotkey="Meta+3" href="projects.html">
+        <ul>
+          <li class="nav-button-text">Projects</li>
+          <li>⌘3</li>
+        </ul>
+      </a>
+      <a class="nav-button" data-hotkey="Meta+4" href="blog.html">
+        <ul>
+          <li class="nav-button-text">Blog</li>
+          <li>⌘4</li>
+        </ul>
+      </a>
+      <a class="nav-button" data-hotkey="Meta+5" href="contact.html">
+        <ul>
+          <li class="nav-button-text">Contact</li>
+          <li>⌘5</li>
+        </ul>
+      </a>
+    </nav>
+    <script>
+      document.addEventListener("keydown", (keyboardEvent) => {
+        [...document.querySelectorAll(`[data-hotkey]`)].forEach((elem) => {
+          const combineKey = elem.dataset.hotkey.split("+");
 
-<body>
-  <!-- Navbar -->
-  <div class="terminal-window">
-    <div class="terminal-window-button" style="background-color: #ff5f57"></div>
-    <div class="terminal-window-button" style="background-color: #febc30"></div>
-    <div class="terminal-window-button" style="background-color: #2bc840"></div>
-    <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
-  </div>
-  <nav>
-    <a class="nav-button" data-hotkey="Meta+1" href="index.html">
-      <ul>
-        <li class="nav-button-text">~</li>
-        <li>⌘1</li>
-      </ul>
-    </a>
-    <a class="nav-button-active" data-hotkey="Meta+2" href="about.html">
-      <ul>
-        <li class="nav-button-text">About</li>
-        <li>⌘2</li>
-      </ul>
-    </a>
-    <a class="nav-button" data-hotkey="Meta+3" href="projects.html">
-      <ul>
-        <li class="nav-button-text">Projects</li>
-        <li>⌘3</li>
-      </ul>
-    </a>
-    <a class="nav-button" data-hotkey="Meta+4" href="blog.html">
-      <ul>
-        <li class="nav-button-text">Blog</li>
-        <li>⌘4</li>
-      </ul>
-    </a>
-    <a class="nav-button" data-hotkey="Meta+5" href="contact.html">
-      <ul>
-        <li class="nav-button-text">Contact</li>
-        <li>⌘5</li>
-      </ul>
-    </a>
-  </nav>
-  <script>
-    document.addEventListener("keydown", (keyboardEvent) => {
-      [...document.querySelectorAll(`[data-hotkey]`)].forEach((elem) => {
-        const combineKey = elem.dataset.hotkey.split("+");
+          for (let myKeyStr of combineKey) {
+            myKeyStr = myKeyStr.toUpperCase();
 
-        for (let myKeyStr of combineKey) {
-          myKeyStr = myKeyStr.toUpperCase();
-
-          if (myKeyStr.length > 1) {
-            if (
+            if (myKeyStr.length > 1) {
+              if (
                 (myKeyStr === "META" && keyboardEvent.metaKey) ||
                 keyboardEvent.ctrlKey
               ) {
-              continue;
+                continue;
+              }
+            }
+            if (keyboardEvent.key.toUpperCase() !== myKeyStr) {
+              return;
             }
           }
-          if (keyboardEvent.key.toUpperCase() !== myKeyStr) {
-            return;
-          }
-        }
-        keyboardEvent.preventDefault();
-        elem.click();
+          keyboardEvent.preventDefault();
+          elem.click();
+        });
       });
-    });
-  </script>
-  <!-- End of navbar -->
+    </script>
+    <!-- End of Navbar -->
   <div style="padding-left: 15px">
     <div class="terminal-text" id="last-login"></div>
     <script>
@@ -86,7 +97,8 @@
     <span class="terminal-text-highlighted">~ </span>
     <span class="terminal-text-highlighted">cd </span>
     <span class="terminal-text">development/portfolio</span>
-    <div></div>
+    <span id="onRemove"></span>
+    <div id="line-1">
     <img src="assets/images/terminal-symbol.svg" alt="terminal new line symbol"
       style="padding-right: 4px; padding-top: 15px" />
 
@@ -111,6 +123,7 @@
         document.querySelector(".Typewriter__cursor").style.backgroundColor =
           "transparent";
         document.getElementById("line-2").style.display = "block";
+        document.getElementById("input-0").focus();
       }, 2000);
     </script>
     <div id="line-2" style="display: none">
@@ -222,14 +235,169 @@
         document.getElementById("age").innerHTML = "Age: " + calculateAge();
         document.getElementById("experience").innerHTML = "Experience since: " + calculateExperience();
       </script>
-      <img src="assets/images/terminal-symbol.svg" alt="terminal new line symbol"
-        style="padding-right: 4px; padding-top: 15px" />
-      <span class="terminal-text-highlighted">portfolio [</span>
-      <span style="color: #60fdff">main</span>
-      <span class="terminal-text-highlighted">]</span>
-      <span>⚡️</span>
-      </p>
+      <span class="terminal-text-highlighted">portfolio </span>
+          <span>⚡️</span>
+          <input
+            class="input-0"
+            id="input-0"
+            autocomplete="off"
+            placeholder="help"
+          />
     </div>
+       <script>
+          async function createElements() {
+            var counter = sessionStorage.getItem("counter");
+            counter = parseInt(counter);
+            var inputWithCounter = `input-${counter + 1}`;
+            var deactivateInput = true;
+
+            document
+              .getElementById(`input-${counter}`)
+              .addEventListener("keydown", (e) => {
+                if (e.key !== "Enter") {
+                  return;
+                }
+
+                if (
+                  document.getElementById(`input-${counter}`).value === "help"
+                ) {
+                  const help = document.createElement("div");
+                  help.innerHTML = `<span class="terminal-text-highlighted">help</span> - shows this help message<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">about</span> - shows information about me<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">projects</span> - shows my projects<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">blog</span> - shows my blog<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">contact</span> - shows my contact informations<br /><br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">whoami</span> - Figure it out😉<br /><br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">ls</span> - list files in current directory<br /><br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">clear</span> - clears the terminal<br />`;
+                  help.innerHTML += `<span class="terminal-text-highlighted">exit</span> - exits the terminal`;
+                  help.className = "terminal-text";
+                  document.getElementById("line-2").appendChild(help);
+                  makeBr = false;
+                } else if (
+                  document.getElementById(`input-${counter}`).value === "about"
+                ) {
+                  const about = document.createElement("div");
+                  about.innerHTML = `<span style="color:orange">Warning: </span>An instance of about is already running. You will be redirected...`;
+                  about.className = "terminal-text";
+                  document.getElementById("line-2").appendChild(about);
+                  about.innerHTML += `<br /><span style="color:red">Error: </span>An error has occurred. You have to restart it with our <span class="terminal-text-highlighted">make</span> command.`;
+
+                  setTimeout(function () {
+                    window.location.href = "about.html";
+                  }, 5000);
+                } else if (
+                  document.getElementById(`input-${counter}`).value ===
+                  "projects"
+                ) {
+                  const projects = document.createElement("div");
+                  projects.innerHTML = `<span style="color:orange">Warning: </span>An instance of projects is already running. You will be redirected...`;
+                  projects.className = "terminal-text";
+                  document.getElementById("line-2").appendChild(projects);
+                  projects.innerHTML += `<br /><span style="color:red">Error: </span>An error has occurred. You have to restart it with our <span class="terminal-text-highlighted">make</span> command.`;
+
+                  setTimeout(function () {
+                    window.location.href = "projects.html";
+                  }, 5000);
+                } else if (
+                  document.getElementById(`input-${counter}`).value === "blog"
+                ) {
+                  const blog = document.createElement("div");
+                  blog.innerHTML = `<span style="color:orange">Warning: </span>An instance of blog is already running. You will be redirected...`;
+                  blog.className = "terminal-text";
+                  document.getElementById("line-2").appendChild(blog);
+                  blog.innerHTML += `<br /><span style="color:red">Error: </span>An error has occurred. You have to restart it with our <span class="terminal-text-highlighted">make</span> command.`;
+
+                  setTimeout(function () {
+                    window.location.href = "blog.html";
+                  }, 5000);
+                } else if (
+                  document.getElementById(`input-${counter}`).value ===
+                  "contact"
+                ) {
+                  const contact = document.createElement("div");
+                  contact.innerHTML = `<span style="color:orange">Warning: </span>An instance of contact is already running. You will be redirected...`;
+                  contact.className = "terminal-text";
+                  document.getElementById("line-2").appendChild(contact);
+                  contact.innerHTML += `<br /><span style="color:red">Error: </span>An error has occurred. You have to restart it with our <span class="terminal-text-highlighted">make</span> command.`;
+
+                  setTimeout(function () {
+                    window.location.href = "contact.html";
+                  }, 5000);
+                } else if (
+                  document.getElementById(`input-${counter}`).value === "whoami"
+                ) {
+                  const contact = document.createElement("div");
+                  contact.innerHTML = `3...2...1...`;
+                  contact.className = "terminal-text";
+                  document.getElementById("line-2").appendChild(contact);
+
+                  setTimeout(function () {
+                    window.location.href = "about.html";
+                  }, 3000);
+                } else if (
+                  document.getElementById(`input-${counter}`).value === "ls"
+                ) {
+                  const projects = document.createElement("table");
+
+                  projects.innerHTML = `<tr><td>home</td><td>about</td><td>projects</td></tr>`;
+                  projects.innerHTML += `<tr><td>blog</td><td>contact</td><td>resume</td></tr>`;
+
+                  projects.style.width = "100%";
+                  projects.style.color = "#60fdff";
+                  document.getElementById("line-2").appendChild(projects);
+
+                  var line2 = document.createElement("div");
+                  line2.id = "line-2";
+                  document.getElementById("line-1").appendChild(line2);
+                }
+                // TODO: clear command
+                else if (
+                  document.getElementById(`input-${counter}`).value === "exit"
+                ) {
+                  window.location = "about:blank";
+                  return;
+                } else {
+                  const notFound = document.createElement("div");
+                  notFound.innerHTML = `<span class="terminal-text-highlighted">${
+                    document.getElementById(`input-${counter}`).value
+                  }</span> - command not found`;
+                  notFound.className = "terminal-text";
+                  document.getElementById("line-2").appendChild(notFound);
+                }
+
+                if (deactivateInput) {
+                  const input = (document.getElementById(
+                    `input-${counter}`
+                  ).disabled = true);
+                }
+
+                const nextLine2 = document.createElement("span");
+                nextLine2.className = "terminal-text-highlighted";
+                nextLine2.innerHTML = "portfolio ";
+                document.getElementById("line-2").appendChild(nextLine2);
+
+                const nextLine3 = document.createElement("span");
+                nextLine3.innerHTML = "⚡️";
+                document.getElementById("line-2").appendChild(nextLine3);
+
+                const nextLine4 = document.createElement("input");
+                nextLine4.className = inputWithCounter;
+                nextLine4.id = inputWithCounter;
+                nextLine4.autoComplete = "off";
+                document.getElementById("line-2").appendChild(nextLine4);
+                document.getElementById(inputWithCounter).focus();
+
+                counter++;
+                sessionStorage.setItem("counter", counter);
+
+                createElements();
+              });
+          }
+          createElements();
+        </script>
+    </div>
+  </div>
   </div>
 </body>
 
