--- a/terminal/about.html
+++ b/terminal/about.html
@@ -14,10 +14,10 @@
   <body>
     <!-- Navbar -->
     <div class="terminal-window">
-      <div
-        class="terminal-window-button"
-        style="background-color: #ff5f57"
-      ></div>
+      <a
+        class="terminal-window-close-button"
+        href="../desktop/desktop.html"
+      ></a>
       <div
         class="terminal-window-button"
         style="background-color: #febc30"
@@ -29,7 +29,7 @@
       <div class="terminal-window-name">florianschmitz@MacBook-Pro:~</div>
     </div>
     <nav>
-      <a class="nav-button" data-hotkey="Meta+1" href="index.html">
+      <a class="nav-button" data-hotkey="Meta+1" href="../index.html">
         <ul>
           <li class="nav-button-text">~</li>
           <li>⌘1</li>
@@ -355,7 +355,7 @@
                 else if (
                   document.getElementById(`input-${counter}`).value === "exit"
                 ) {
-                  window.location = "about:blank";
+                  window.location.href = "/desktop/desktop.html";
                   return;
                 } else {
                   const notFound = document.createElement("div");
